--- a/year/2022.md
+++ b/year/2022.md
@@ -58,7 +58,7 @@
 | 2022.2.19 | FC     | 『ERIKA IKUTA OFFICIAL SITE』开设直播記念                    |                                                              |                                                              |
 | 2022.2.28 | 电影   | 【剧透注意】行骗天下TV-泪的大Hit感謝祭                       | [生](https://www.bilibili.com/video/BV1Ar4y167xt) ‖ [油管](https://www.youtube.com/watch?v=88ltoUADhQQ) |                                                              |
 | 2022.2.28 | 乃木坂 | 2012.8.13「乃木坂46 Live in Osaka ～がんばれ！今野～」       |      [生](https://www.bilibili.com/video/BV1qm4y1R7YB)       |                                                              |
-| 2022.3.5  | 音乐   | 富士台 MUSIC FAIR   18:00～<br>【卒業ソングメドレー】  「卒業写真」「旅立ちの日に」生田絵梨花 × Little Glee Monster |                                                              | [MF 2900回纪念官网 ](https://www.fujitv.co.jp/MUSICFAIR/viewing_2021/recording.html) |
+| 2022.3.5  | 音乐   | 富士台 MUSIC FAIR   18:00～<br>【卒業ソングメドレー】  「卒業写真」「旅立ちの日に」生田絵梨花 × Little Glee Monster |[熟](https://www.bilibili.com/video/BV1PS4y1r7pj)     | [MF 2900回纪念官网 ](https://www.fujitv.co.jp/MUSICFAIR/viewing_2021/recording.html) |
 | 2022.3.7  | 番组   | 激レアさんを連れてきた。23:15～                              |                                                              |                                                              |
 | 2022.3.7  | 番组   | プレミアの巣窟＜Mナイト＞  25:50～                           |                                                              |                                                              |
 | 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜           |                                                              | [油管](https://www.youtube.com/watch?v=rluse_flW8k)          |
