--- a/theme/音番总结.md
+++ b/theme/音番总结.md
@@ -81,7 +81,7 @@
 | 2020.7.18  | MUSIC FAIR                       | 『Perfect』                                                  | [熟](https://www.bilibili.com/video/BV1TA411v7Bs/) |      |
 | 2020.7.25  | 僕らのミュージカル<br>ソング2020 | 『In Your Hands』                                            | [熟](https://www.bilibili.com/video/BV1kZ4y1M7By/) |      |
 | 2020.9.15  | Utacon                           | 『Wake me up』生田絵梨花 × 海宝直人                          | [熟](https://www.bilibili.com/video/BV1WK411K7VF/) |      |
-| 2020.10.6  | NONSTOP!                         | 『Around The World』生田絵梨花 × 海宝直人                   | [熟](https://www.bilibili.com/video/BV1P5411L7yb) |      |
+| 2020.10.6  | NONSTOP!                         | 『Around The World』生田絵梨花 × 海宝直人                   | [熟](https://www.bilibili.com/video/BV1P5411L7yb) |  [其他版本](https://www.bilibili.com/video/BV1Fy4y1t7dX?p=2)    |
 | 2020.12.2  | FNS歌谣祭                        | 『わかれうた』德永英明 × 生田絵梨花                          | [熟](https://www.bilibili.com/video/BV1hr4y1c7HF/) |      |
 | 2020.12.9  | FNS歌谣祭                        | 『民衆の歌』生田絵梨花『愛し君へ』森山直太朗 × Pf.生田絵梨花 | [熟](https://www.bilibili.com/video/BV1VU4y147dp/) |      |
 | 2020.12.21 | CDTV                             | 『生まれてはじめて』 生田絵梨花 × 久保史緒里                 | [熟](https://www.bilibili.com/video/BV1xv41147w7/) |      |
