--- a/year/2022.md
+++ b/year/2022.md
@@ -61,7 +61,7 @@
 | 2022.3.5  | 音乐   | 富士台 MUSIC FAIR   18:00～<br>【卒業ソングメドレー】  「卒業写真」「旅立ちの日に」生田絵梨花 × Little Glee Monster |[熟](https://www.bilibili.com/video/BV1PS4y1r7pj)     | [MF 2900回纪念官网 ](https://www.fujitv.co.jp/MUSICFAIR/viewing_2021/recording.html) |
 | 2022.3.7  | 番组   | 激レアさんを連れてきた。23:15～                              |                                                              |                                                              |
 | 2022.3.7  | 番组   | プレミアの巣窟＜Mナイト＞  25:50～                           |                                                              |                                                              |
-| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜           |                                                              | [油管](https://www.youtube.com/watch?v=rluse_flW8k)          |
+| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜           |                                                              | [预告](https://www.bilibili.com/video/BV1Ya411h7J4)          |
 | 2022.3.17 | 番组   | 千鳥のクセがスゴいネタGP     21:00～                         |                                                              |                                                              |
 | 2022.3.18 | 番组   | ネタパレ70分SP                        |                                                              |                                                              |
 | 2022.3.19 | 音乐   | 富士台 MUSIC FAIR   18:00～<br>「愛していれば分かり合える」山崎育三郎 × 生田絵梨花 |                                                              |                                                              |
