--- a/year/2022.md
+++ b/year/2022.md
@@ -34,9 +34,9 @@
 | 2022.1.14 | 电影   | 『行骗天下JP 英雄篇』上映                                    |                                                              |                                                              |
 | 2022.1.14 | 番组   | 全力！脱力times                                              |      [熟](https://www.bilibili.com/video/BV1mP4y1j766)       |                                                              |
 | 2022.1.15 | 新闻   | 闹钟TV-行骗天下                                              |      [生](https://www.bilibili.com/video/BV17T4y117td)       |                                                              |
-| 2022.1.15 | 乃木坂 | 【后台镜头】为大家带来2021年最后一天的后台                   |      [熟](https://www.bilibili.com/video/BV1fF411H7ct)       |                                                              |
+| 2022.1.15 | 乃木坂 | 【后台镜头】为大家带来2021年最后一天的后台                   |      [熟](https://www.bilibili.com/video/BV1fF411H7ct) ‖ [油管](https://www.youtube.com/watch?v=tlNwz0RwhSc)       |                                                              |
 | 2022.1.19 | 杂志   | スポーツ報知                                                 | [网盘](https://pan.baidu.com/s/1jQVUMgW3XOZFzBgsb43S6g?pwd=0122) |                                                              |
-| 2022.1.20 | CM     | 参天制药『Well-Wash EYE』的电视广告"给眼睛洗个澡"篇          |      [熟](https://www.bilibili.com/video/BV1B34y117Lv)       |                                                              |
+| 2022.1.20 | CM     | 参天制药『Well-Wash EYE』的电视广告"给眼睛洗个澡"篇          |      [熟](https://www.bilibili.com/video/BV1B34y117Lv) ‖ [油管](https://www.youtube.com/watch?v=2Z-uVOdXXFc)       |                                                              |
 | 2022.1.21 | 新闻   | 闹钟TV-Hikakin                                               |      [生](https://www.bilibili.com/video/BV1fm4y197eA)       |                                                              |
 | 2022.1.22 | 新闻   | 闹钟TV-参天制药『Well-Wash EYE』的TVCM                       |      [熟](https://www.bilibili.com/video/BV1B34y117Lv)       |                                                              |
 | 2022.1.22 | 番组   | 【HikakinTV】长泽雅美桑和生田绘梨花桑突然来家里…             | [熟](https://www.bilibili.com/video/BV1G3411j7wd) ‖ [油管](https://www.youtube.com/watch?v=Bmza5g03zzQ) |                                                              |
@@ -44,7 +44,7 @@
 | 2022.1.22 | 番组   | 【HIKAKIN合作】『行骗天下TV』在HIKAKIN桑的家里进行史上最小的钓鱼 | [熟](https://www.bilibili.com/video/BV1o3411V7jx/) ‖ [油管](https://www.youtube.com/watch?v=Hyx42TE6JjA) |                                                              |
 | 2022.1.24 | 广播   | TOKYO FM『TOKYO SPEAKEASY』with 钢琴家 反田恭平              | [网盘](https://pan.baidu.com/s/1k1QTCGe1LEbjDfz9n8Y7zA?pwd=0122) |                                                              |
 | 2022.1.25 | 电影   | 【英语禁止】『行骗天下TV』小手伸也采访共演者                 | [生](https://www.bilibili.com/video/av210950494) ‖ [油管](https://youtu.be/lKyaouoR-VQ?t=304) |                                                              |
-| 2022.1.26 | 番组   | 『櫻井・有吉THE夜会』未公开talk                              |      [熟](https://www.bilibili.com/video/BV1VL4y1x7fA)       |                                                              |
+| 2022.1.26 | 番组   | 『櫻井・有吉THE夜会』未公开talk                              |      [熟](https://www.bilibili.com/video/BV1VL4y1x7fA) ‖ [油管](https://www.youtube.com/watch?v=GDLEUaOSI1E)       |                                                              |
 | 2022.1.27 | 番组   | 『櫻井・有吉THE夜会』本篇                                    |      [熟](https://www.bilibili.com/video/BV1Ui4y1171Y/)      |                                                              |
 | 2022.2.2  | 番组   | 告诉我坂道老师！毕业·生田绘梨花编@日刊体育                   | [生](https://www.bilibili.com/video/bv1e44y1n7rZ) ‖ [油管](https://www.youtube.com/watch?v=54yKhV1tY8U) |                                                              |
 | 2022.2.8  | 番组   | 『ザ！世界仰天ニュース』 让人惊愕的新闻 生田绘梨花cut        |      [熟](https://www.bilibili.com/video/BV1FT4y1979p)       |                                                              |
