--- a/year/2022.md
+++ b/year/2022.md
@@ -61,8 +61,10 @@
 | 2022.3.5  | 音乐   | 富士台 MUSIC FAIR   18:00～<br>【卒業ソングメドレー】  「卒業写真」「旅立ちの日に」生田絵梨花 × Little Glee Monster |[熟](https://www.bilibili.com/video/BV1PS4y1r7pj)     | [MF 2900回纪念官网 ](https://www.fujitv.co.jp/MUSICFAIR/viewing_2021/recording.html) |
 | 2022.3.7  | 番组   | 激レアさんを連れてきた。23:15～                              |    [生](https://www.bilibili.com/video/BV1VU4y1o7DH)                                                           | 未公开talk [生](https://www.bilibili.com/video/BV1XF411x7zp)‖ [油管](https://www.youtube.com/watch?v=2pxZWBZRlpw)                   |
 | 2022.3.7  | 番组   | プレミアの巣窟＜Mナイト＞  25:50～                           |    [生](https://www.bilibili.com/video/BV1nP4y1g7LJ)                                                          |                                                              |
+| 2022.3.10 | 电视剧 | 『Gossip 她想知道的真正的○○』  第10集  富士电视台 22:00~             |                   |                                                              |
 | 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜           |                                                              | [预告](https://www.bilibili.com/video/BV1Ya411h7J4)          |
 | 2022.3.17 | 番组   | 千鳥のクセがスゴいネタGP     21:00～                         |                                                              |                                                              |
+| 2022.3.17 | 电视剧 | 『Gossip 她想知道的真正的○○』  第11集  富士电视台 22:00~                            |                                                              |                                                              |
 | 2022.3.18 | 番组   | ネタパレ70分SP                        |                                                              |                                                              |
 | 2022.3.19 | 音乐   | 富士台 MUSIC FAIR   18:00～<br>「愛していれば分かり合える」山崎育三郎 × 生田絵梨花 |                                                              |                                                              |
 | 2022.3.22  | 杂志 | TV guide Alpha EPISODE AAA vol.53          |   |   [amazon](https://www.amazon.co.jp/TV%E3%82%AC%E3%82%A4%E3%83%89Alpha-EPISODE-AAA-TV%E3%82%AC%E3%82%A4%E3%83%89MOOK-107%E5%8F%B7/dp/4867014095/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OE6FGHPHNUPP&keywords=TV+guide+Alpha+AAA&qid=1646834337&sprefix=tv+guide+alpha+aaa%2Caps%2C241&sr=8-1)    |   
