🚧update 剧场の灯を消すな 熟肉链接

--- a/theme/音乐剧&舞台剧汇总.md
+++ b/theme/音乐剧&舞台剧汇总.md
@@ -313,7 +313,9 @@
 **物料&简要说明**
 
 - 2020年7月5日
-- 本篇: 生肉 https://www.bilibili.com/video/BV1yD4y1S7ii
+- 本篇: 
+  - 生田绘梨花cut熟肉: https://pan.baidu.com/s/19PbbqEP2fX2XdWdVaNtsgw?pwd=0122 
+  - 全篇生肉: https://www.bilibili.com/video/BV1yD4y1S7ii
 
 **评论感想**
 
