--- a/year/2022.md
+++ b/year/2022.md
@@ -65,7 +65,7 @@
 | 2022.3.10 | 电视剧 | 『Gossip 她想知道的真正的○○』  第10集  富士电视台 22:00~             |      [微博](https://weibo.com/5177703789/Lj8m96nvS?type=comment#_rnd1646925055703)             |      [预告](https://weibo.com/tv/show/1034:4745605483004013)              |
 | 2022.3.12 | 音乐 | 富士台 MUSIC FAIR   18:00～ talk           |    [生](https://www.bilibili.com/video/BV17Y41137dx)               |          |
 | 2022.3.12 | 番组 | 『ピーチケ プラス』   28:13～          |                |          |
-| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜           |                                                              | [预告](https://www.bilibili.com/video/BV1Ya411h7J4)          |
+| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜  |  [生](https://www.bilibili.com/video/BV1fu411B7mg)   | [预告](https://www.bilibili.com/video/BV1Ya411h7J4)  |
 | 2022.3.17 | 番组   | 千鳥のクセがスゴいネタGP     21:00～                         |                                                              |                                                              |
 | 2022.3.17 | 电视剧 | 『Gossip 她想知道的真正的○○』  第11集  富士电视台 22:00~                            |                                                              |                                                              |
 | 2022.3.18 | 番组   | ネタパレ70分SP                        |                                                              |                                                              |
