🚧 更新22.1.8Making of MTV Unplugged 22.3.13生田絵梨花の乱熟肉 22.4.9新音楽番組资讯

--- a/year/2022.md
+++ b/year/2022.md
@@ -20,7 +20,7 @@
 
 | 🗓日期     | 📌分类  | 💛详情                                                        |                            🔗链接                             | 🔨备注                                                        |
 | :-------- | :----- | :----------------------------------------------------------- | :----------------------------------------------------------: | ------------------------------------------------------------ |
-| 2022.1.8  | 乃木坂 | Making of MTV Unplugged - Nogizaka46                         | [网盘](https://pan.baidu.com/s/1HOrjl0IxWmla0eiBb7eiPg?pwd=yfzj) |                                                              |
+| 2022.1.8  | 乃木坂 | Making of MTV Unplugged - Nogizaka46     | [熟](https://www.bilibili.com/video/BV1eF411s7Kq/) | [官网](https://www2.mtvjapan.com/event/unplugged/nogizaka46/)                                                             |
 | 2022.1.10 | 电影   | 『行骗天下JP 英雄篇』世界首映舞台问候                        | [生](https://www.bilibili.com/video/BV1Lq4y1A7ZF) ‖ [油管](https://www.youtube.com/watch?v=L60743vhkJM) | [行骗天下JP 英雄篇官网](https://confidenceman-movie.com)     |
 | 2022.1.10 | 电影   | 特番『行骗天下JP学园　英雄篇』小手伸也先生 - 拿破仑          |    [生](https://www.bilibili.com/video/BV1WF411v7kL?p=1)     |                                                              |
 | 2022.1.11 | 杂志   | 『週刊FLASH』2022年1月25日号（1630号）                       |        [微博](https://weibo.com/5177703789/Lag0b2PiB)        |                                                              |
@@ -65,7 +65,7 @@
 | 2022.3.10 | 电视剧 | 『Gossip 她想知道的真正的○○』  第10集  富士电视台 22:00~             |      [微博](https://weibo.com/5177703789/Lj8m96nvS?type=comment#_rnd1646925055703)             |      [预告](https://weibo.com/tv/show/1034:4745605483004013)              |
 | 2022.3.12 | 音乐 | 富士台 MUSIC FAIR   18:00～ talk           |    [生](https://www.bilibili.com/video/BV17Y41137dx)               |          |
 | 2022.3.12 | 番组 | 『ピーチケ プラス』   28:13～          |                |          |
-| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜  |  [生](https://www.bilibili.com/video/BV1fu411B7mg)   | [预告](https://www.bilibili.com/video/BV1Ya411h7J4)  |
+| 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜  |  [熟](https://weibo.com/6516601401/LjIlo4rfo?type=comment)   | [预告](https://www.bilibili.com/video/BV1Ya411h7J4)  |
 | 2022.3.17 | 番组   | 千鳥のクセがスゴいネタGP     21:00～                         |                                                              |                                                              |
 | 2022.3.17 | 电视剧 | 『Gossip 她想知道的真正的○○』  第11集  富士电视台 22:00~                            |                                                              |                                                              |
 | 2022.3.18 | 番组   | ネタパレ70分SP                        |                                                              |                                                              |
@@ -74,6 +74,7 @@
 | 2022.3.24  | 杂志 | デジタルTVガイド全国版 2022年5月号         |   |   [amazon](https://www.amazon.co.jp/%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABTV%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88-2022%E5%B9%B45%E6%9C%88%E5%8F%B7/dp/B09TTCD97Y/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=G0PN8BHG06WE&keywords=%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABTV%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7&qid=1647021071&sprefix=%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABtv%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C232&sr=8-1)    |   
 | 2022.3.26 | 音乐   | 富士台 MUSIC FAIR   18:00～<br/>「オン・マイ・オウン」生田絵梨花 |                                                              |                                                              |
 | 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                             |                                                              |                                                              |
+| 2022.4.9 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ |                                         |                                                              |
 | 2022.4.19  | 杂志 | BARFOUT! バァフアウト! 2022年5月号 MAY 2022 Volume 320          |   |   [amazon](https://www.amazon.co.jp/dp/4344954238/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OPN98NSHVP28&keywords=barfout%21+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88%21+2022%E5%B9%B4+5%E6%9C%88%E5%8F%B7&qid=1646747612&sprefix=barfout+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C226&sr=8-1)    |                  
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
