--- a/year/2022.md
+++ b/year/2022.md
@@ -63,11 +63,11 @@
 | 2022.3.7  | 番组   | 激レアさんを連れてきた。23:15～                              |    [生](https://pan.baidu.com/s/1cBFPVQWfl4Zf5WH1C6y-1g?pwd=0122)                                  | 未公开talk [生](https://www.bilibili.com/video/BV1XF411x7zp)‖ [油管](https://www.youtube.com/watch?v=2pxZWBZRlpw)                   |
 | 2022.3.7  | 番组   | プレミアの巣窟＜Mナイト＞  25:50～                           |    [生](https://www.bilibili.com/video/BV1nP4y1g7LJ)                                                          |                                                              |
 | 2022.3.10 | 电视剧 | 『Gossip 她想知道的真正的○○』  第10集  富士电视台 22:00~             |      [微博](https://weibo.com/5177703789/Lj8m96nvS?type=comment#_rnd1646925055703)             |      [预告](https://weibo.com/tv/show/1034:4745605483004013)              |
-| 2022.3.12 | 音乐 | 富士台 MUSIC FAIR   18:00～ talk           |    [生](https://www.bilibili.com/video/BV17Y41137dx)               |          |
+| 2022.3.12 | 音乐 | 富士台 MUSIC FAIR   18:00～ talk           |    [熟](https://www.bilibili.com/video/BV1oZ4y1z7Xw/)               |          |
 | 2022.3.12 | 番组 | 『ピーチケ プラス』   28:13～          |                |          |
 | 2022.3.13 | 电视剧 | 『松尾スズキと30分の女優2』生田絵梨花の乱  23:00〜  |  [熟](https://weibo.com/6516601401/LjIlo4rfo?type=comment)   | [预告](https://www.bilibili.com/video/BV1Ya411h7J4)  |
 | 2022.3.17 | 番组   | 千鳥のクセがスゴいネタGP     21:00～     |    [生](https://www.bilibili.com/video/BV1PU4y1Z7Kh)        |                                 |
-| 2022.3.17 | 电视剧 | 『Gossip 她想知道的真正的○○』  第11集  富士电视台 22:00~     |     [生](https://pan.baidu.com/s/1ID9CyP2y3a9LgwIZ0GI8iw?pwd=qqbb)                                                        |               [Making](https://www.bilibili.com/video/bv1GL4y1M7Yr)                                                 |
+| 2022.3.17 | 电视剧 | 『Gossip 她想知道的真正的○○』  第11集  富士电视台 22:00~     |     [熟](https://www.bilibili.com/video/BV1T34y1t7b2/)                                                        |               [Making](https://www.bilibili.com/video/bv1GL4y1M7Yr)                                                 |
 | 2022.3.18 | 番组   | ネタパレ70分SP 23:00〜24:10            |                                                              |                                                              |
 | 2022.3.19 | 音乐   | 富士台 MUSIC FAIR   18:00～<br>「愛していれば分かり合える」山崎育三郎 × 生田絵梨花 |                                                              |                                                              |
 | 2022.3.22  | 杂志 | TV guide Alpha EPISODE AAA vol.53          |   |   [amazon](https://www.amazon.co.jp/TV%E3%82%AC%E3%82%A4%E3%83%89Alpha-EPISODE-AAA-TV%E3%82%AC%E3%82%A4%E3%83%89MOOK-107%E5%8F%B7/dp/4867014095/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OE6FGHPHNUPP&keywords=TV+guide+Alpha+AAA&qid=1646834337&sprefix=tv+guide+alpha+aaa%2Caps%2C241&sr=8-1)    |   
