🚧日常更新增加部分群友感想&增加在团演出
增加部分感想
增加在团演出16人
增加帝剧
补充熟肉链接

--- a/theme/音乐剧&舞台剧汇总.md
+++ b/theme/音乐剧&舞台剧汇总.md
@@ -28,6 +28,20 @@
 | 2021.4.22 ~ 4.24       | [『**COCOON PRODUCTION 2021「シブヤデアイマショウ」**』](https://github.com/ikuchanfans/wiki/blob/main/theme/音乐剧%26舞台剧汇总.md#13-cocoon-production-2021シブヤデアイマショウ) | **登场嘉宾**                       |
 | 2022.5.7 ~ 2022.5.29   | 『 **四月は君の嘘**』[四月是你的谎言](https://github.com/ikuchanfans/wiki/blob/main/theme/音乐剧%26舞台剧汇总.md#14-四月は君の嘘四月是你的谎言) | **宮園かをり** 宫园薰              |
 
+乃木坂46团内演出 ↓
+
+| 🌞日期                 | 🎫 剧名                                                       | 💃🏻角色           |
+| --------------------- | ------------------------------------------------------------ | ---------------- |
+| 2012.9.1 ~ 9.9        | 『**16人のプリンシパル**』  [16人的主角](https://github.com/ikuchanfans/wiki/blob/main/theme/音乐剧%26舞台剧汇总.md#1-16人のプリンシパル--16人的主角) | 根据投票结果不定 |
+| 2013.5.3 ~ 2013.6.2   | 『**16人のプリンシパル deux **』  [16人的主角 deux](https://github.com/ikuchanfans/wiki/blob/main/theme/音乐剧%26舞台剧汇总.md#1-16人のプリンシパル--16人的主角) | 根据投票结果不定 |
+| 2014.5.30 ~ 2013.6.15 | 『**16人のプリンシパル trois**』  [16人的主角 trois](https://github.com/ikuchanfans/wiki/blob/main/theme/音乐剧%26舞台剧汇总.md#1-16人のプリンシパル--16人的主角) | 根据投票结果不定 |
+
+其他类音乐剧个人出演 ↓
+
+| 🌞日期            | 🎫 剧名                                                       | 💃🏻角色   |
+| ---------------- | ------------------------------------------------------------ | -------- |
+| 2020.8.14 ~ 8.25 | THE MUSICAL CONCERT at IMPERIAL THEATRE [帝国剧场音乐剧演唱会](https://github.com/ikuchanfans/wiki/blob/main/theme/音乐剧%26舞台剧汇总.md#1-the-musical-concert-at-imperial-theatre ) | 嘉宾演唱 |
+
 
 
 ## 1. 『ココ・スマイル5 〜明日へのロックンロール〜 』  coco・smile5 〜通往明天的摇滚路〜
@@ -101,7 +115,13 @@
 
 **评论感想**
 
-🥺<u>此处需要大家来说说看感想</u>
+👏🏻感谢热心群友补充感想 ↓　欢迎更多感想！
+
+> 花花在进乃团后第一部音乐剧，所以演技还有一点青涩。她演的角色是代替同样深爱钢琴，却因病去世的哥哥卢内入读音乐学院的露易丝。所以可以看到花花弹钢琴，还听到花花的少年音哦！**BY 楓葉**
+>
+> 作品表現的型式雖然蠻青澀的,但是音樂真的不輸後來的作品。 蕭邦寫給花花的那個愛情主調雖然簡單但韻味其實挺夠的，她唱在那一部作品歌唱的部分成熟度也挺高的那個愛情主調一直到劇情完至少出現了三次，每次都不同的詮釋，也可以細細品味，總之，靜下心，好好欣賞，會發現，這一部是真的挺優秀的，就跟花花一樣，要細細品味才能真正發掘她的優點。**BY 煎蛋大師**
+
+
 
 ## 4. 『リボンの騎士』  缎带骑士
 
@@ -127,7 +147,14 @@
 
 **评论感想**
 
-🥺<u>此处需要大家来说说看感想</u>
+👏🏻感谢热心群友补充感想 ↓　欢迎更多感想！
+
+> 故事设定为人在出生的时候需要和被放入男性或女性的心，而花花演的蓝宝石王子因为天使的好奇而两种都被放入了。因此，一出生就以男性身份生活的花花一直都没有大问题出现，直至...（请自己去看）
+> 这部剧中花花同样有用少年音，还有其他演员的交流和伏笔也很有趣！
+>
+> BY 楓葉
+
+## 
 
 ## 5. 『ロミオ&ジュリエット』  罗密欧与朱丽叶
 
@@ -157,6 +184,8 @@
 **评论感想**
 
 🥺<u>此处需要大家来说说看感想</u>
+
+群友说是有船戏，很刺激的样子~
 
 ## 6.  『レ・ミゼラブル』 悲惨世界
 
@@ -335,8 +364,10 @@
 
 **物料&简要说明**
 
-- 简介: 2020年7月11日线上直播的TOHO MUSICAL LAB. ，第二部作品HappilyEverAfter，表演者是生田绘梨花和海宝直人, 讲述了一个爱着夜晚带着愿望的女孩入睡后，在这里梦的世界里凭借想象力可以去任何地方，但是唯一做不到的是触摸他。
+- 简介: 2020年7月11日线上直播的TOHO MUSICAL LAB. ，第二部作品Happily Ever After，表演者是生田绘梨花和海宝直人, 讲述了一个爱着夜晚带着愿望的女孩入睡后，在这里梦的世界里凭借想象力可以去任何地方，但是唯一做不到的是触摸他。
 - 访谈+本篇：https://www.bilibili.com/video/BV1Fy4y1t7dX/
+- 还参加过香蕉人设乐统主持的 non stop！ 晨间新闻：https://www.bilibili.com/video/BV1P5411L7yb
+- Utacon熟肉：https://www.bilibili.com/video/BV1WK411K7VF
 
 **评论感想**
 
@@ -393,3 +424,74 @@
 **评论感想**
 
 🥺🥺🥺
+
+
+
+## 🟪  乃木坂46演出
+
+补充一下乃木坂46在籍（村内）的音乐剧
+
+## 1. 『16人のプリンシパル』  16人的主角
+
+![img](https://ariyasu.dynv6.net/http:/img.nogizaka46.com/blog/staff/img/2012/09/12/principal_0901_2.jpg)
+
+![20140531-nogizaka.JPG](http://realsound.jp/images/20140531-nogizaka.JPG)
+
+![6月2日昼公演の「16人のプリンシパル deux」2幕より、生田絵梨花。](https://ogre.natalie.mu/media/news/music/2013/0603/_BB_0013.jpg?imwidth=750&imdensity=1)
+
+**演出时间 & 地点**
+
+- **16人のプリンシパル** 
+  - 2012年9月1日 - 9月9日 PARCO劇場
+- **16人のプリンシパル deux** 
+  - 東京公演 2013年5月3日 - 5月12日 赤坂ACTシアター  
+  - 大阪公演 2013年5月31日 - 6月2日 梅田芸術劇場メインホール
+- **16人のプリンシパル trois** 
+  - 2014年5月30日 - 6月15日 赤坂ACTシアター
+
+**演出角色**
+
+ - 每场的角色是按照观众的投票决定的，所以没有固定角色。
+ - 当落情况详见[维基百科](https://ja.wikipedia.org/wiki/16%E4%BA%BA%E3%81%AE%E3%83%97%E3%83%AA%E3%83%B3%E3%82%B7%E3%83%91%E3%83%AB#16%E4%BA%BA%E3%81%AE%E3%83%97%E3%83%AA%E3%83%B3%E3%82%B7%E3%83%91%E3%83%AB)
+
+**物料&简要说明**
+
+- 简介: 『16人のプリンシパル』是日本女子偶像团体乃木坂46出演的舞台公演。**公演由第1幕・第2幕两部分构成**，第1幕内容为全员进行**自我宣传**，之后由现场观众根据成员的表现即时投票选出第2幕出演成员。第2幕内容为**音乐剧**「アリス in 乃木坂」，其角色分配根据第1幕的投票顺位决定。在2016年6月11日-12日播出的乃木坂46时间TV 第2回公开了「16人のプリンシパル」的初日和最终日，以及「16人のプリンシパル deux」的初日共三场公演的映像。
+- 120901 16人Principle 初日 http://www.bilibili.com/video/av5607265/
+- 120909 16人Principle 最终日 http://www.bilibili.com/video/av5834412/
+- 130503 16人Principle deux 初日 http://www.bilibili.com/video/av6288331/
+- 花絮生肉: https://www.bilibili.com/video/BV1Es41147D8
+- 官方的网站：https://www.nogizaka46.com/files/46/principal/trois/?ima=5116
+
+**评论感想**
+
+ - **生田无双** ~ 生田绘梨花传说的开始！想看看初期的花花强烈建议去补档！
+
+## 📎 其他
+
+都是跟音乐剧相关的，但是也不是出演一部完整的。先在这里分类一下。
+
+## 1. 『THE MUSICAL CONCERT at IMPERIAL THEATRE』  
+
+![THE MUSICAL CONCERT at IMPERIAL THEATRE #1_哔哩哔哩_bilibili](http://i2.hdslb.com/bfs/archive/3a93fdf56fbd6a2651c53d5668f624e18044f0dc.jpg)
+
+
+**演出时间 & 地点**
+
+- 2020年8月14日～8月25日 東京・帝国劇場    
+- 2020年10月10日 19:00 WOWOW放送
+
+**物料&简要说明**
+
+📺第1回 ～东宝音乐剧的历史～
+
+- 简介: 井上芳雄担任MC公演的主要企划🌟
+  豪华的音乐剧演员们实现共演的，还有围绕着帝国剧场的作品小趣闻谈话🎭。
+- 生田絵梨花cut: https://www.bilibili.com/video/BV1HZ4y1L7VR?p=5
+- 熟肉：https://www.bilibili.com/video/BV1pC4y1t7sx
+
+**评论感想**
+
+参考:
+- [帝劇コンWOWOW放送決定！『THE MUSICAL CONCERT at IMPERIAL THEATRE』東宝ミュージカルの祭典](https://kindantheatre.com/toho/the-musical-concert/2020/)
+- [乌冬组相关介绍](https://weibo.com/ikutaudon?from=feed&loc=nickname&is_all=1&is_search=1&key_word=musical#_rnd1647016414848)
