--- a/year/2022.md
+++ b/year/2022.md
@@ -54,7 +54,7 @@
 | 2022.2.18 | 音乐   | SHIONOGI music fair2900回纪念演唱会                          |                                                              |                                                              |
 | 2022.2.18 | 电影   | 『行骗天下JP 英雄篇』making                                  | [生](https://www.bilibili.com/video/BV1JY41157Vn) ‖ [油管](https://www.youtube.com/watch?v=mrW5n5Ent9U) |                                                              |
 | 2022.2.19 | 杂志   | madame FIGARO japon 2022年4月号                              |        [微博](https://weibo.com/5177703789/Lg64xnrJk)        |                                                              |
-| 2022.2.19 | 音乐   | Sound Inn "S"                                                | [生](https://www.bilibili.com/video/BV1Su411Q7Wo) ‖ [网盘](https://pan.baidu.com/s/1C7XJDU_wKq-F5YgoTSacyg?pwd=0122) |                                                              |
+| 2022.2.19 | 音乐   | Sound Inn "S"                                                | [熟](https://www.bilibili.com/video/BV1ri4y1r7Gj)  |                      |
 | 2022.2.19 | FC     | 『ERIKA IKUTA OFFICIAL SITE』开设直播記念                    |                                                              |                                                              |
 | 2022.2.28 | 电影   | 【剧透注意】行骗天下TV-泪的大Hit感謝祭                       | [生](https://www.bilibili.com/video/BV1Ar4y167xt) ‖ [油管](https://www.youtube.com/watch?v=88ltoUADhQQ) |                                                              |
 | 2022.2.28 | 乃木坂 | 2012.8.13「乃木坂46 Live in Osaka ～がんばれ！今野～」       |      [生](https://www.bilibili.com/video/BV1qm4y1R7YB)       |                                                              |
@@ -69,7 +69,7 @@
 | 2022.3.17 | 番组   | 千鳥のクセがスゴいネタGP     21:00～     |    [生](https://www.bilibili.com/video/BV1PU4y1Z7Kh)        |                                 |
 | 2022.3.17 | 电视剧 | 『Gossip 她想知道的真正的○○』  第11集  富士电视台 22:00~     |     [熟](https://www.bilibili.com/video/BV1T34y1t7b2/)                                                        |               [Making](https://www.bilibili.com/video/bv1GL4y1M7Yr)                                                 |
 | 2022.3.18 | 番组   | ネタパレ70分SP 23:00〜24:10            |      [生](https://www.bilibili.com/video/BV1pu411q7ip)              |                                                              |
-| 2022.3.19 | 音乐   | 富士台 MUSIC FAIR   18:00～<br>「愛していれば分かり合える」山崎育三郎 × 生田絵梨花 |                                                              |                                                              |
+| 2022.3.19 | 音乐   | 富士台 MUSIC FAIR   18:00～<br>「愛していれば分かり合える」山崎育三郎 × 生田絵梨花 |   [生](https://www.bilibili.com/video/BV1cr4y1q7sX)                                                          |                                                              |
 | 2022.3.22  | 杂志 | TV guide Alpha EPISODE AAA vol.53          |   |   [amazon](https://www.amazon.co.jp/TV%E3%82%AC%E3%82%A4%E3%83%89Alpha-EPISODE-AAA-TV%E3%82%AC%E3%82%A4%E3%83%89MOOK-107%E5%8F%B7/dp/4867014095/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OE6FGHPHNUPP&keywords=TV+guide+Alpha+AAA&qid=1646834337&sprefix=tv+guide+alpha+aaa%2Caps%2C241&sr=8-1)    |   
 | 2022.3.24  | 杂志 | デジタルTVガイド全国版 2022年5月号         |   |   [amazon](https://www.amazon.co.jp/%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABTV%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88-2022%E5%B9%B45%E6%9C%88%E5%8F%B7/dp/B09TTCD97Y/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=G0PN8BHG06WE&keywords=%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABTV%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7&qid=1647021071&sprefix=%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABtv%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C232&sr=8-1)    |   
 | 2022.3.26 | 音乐   | 富士台 MUSIC FAIR   18:00～<br/>「オン・マイ・オウン」生田絵梨花 |                                                              |                                                              |
