--- a/year/2022.md
+++ b/year/2022.md
@@ -70,6 +70,7 @@
 | 2022.3.17 | 电视剧 | 『Gossip 她想知道的真正的○○』  第11集  富士电视台 22:00~     |     [熟](https://www.bilibili.com/video/BV1T34y1t7b2/)                                                        |               [Making](https://www.bilibili.com/video/bv1GL4y1M7Yr)                                                 |
 | 2022.3.18 | 番组   | ネタパレ70分SP 23:00〜24:10            |      [生](https://www.bilibili.com/video/BV1pu411q7ip)              |                                                              |
 | 2022.3.19 | 音乐   | 富士台 MUSIC FAIR   18:00～<br>「愛していれば分かり合える」山崎育三郎 × 生田絵梨花 |   [生](https://www.bilibili.com/video/BV1cr4y1q7sX)                                                          |                                                              |
+| 2022.3.20 | 音乐   | NHK「Venue101  1分PR」放送  朝8:58〜8:59 |                                                        |                                                              |
 | 2022.3.22  | 杂志 | TV guide Alpha EPISODE AAA vol.53          |   |   [amazon](https://www.amazon.co.jp/TV%E3%82%AC%E3%82%A4%E3%83%89Alpha-EPISODE-AAA-TV%E3%82%AC%E3%82%A4%E3%83%89MOOK-107%E5%8F%B7/dp/4867014095/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OE6FGHPHNUPP&keywords=TV+guide+Alpha+AAA&qid=1646834337&sprefix=tv+guide+alpha+aaa%2Caps%2C241&sr=8-1)    |   
 | 2022.3.24  | 杂志 | デジタルTVガイド全国版 2022年5月号         |   |   [amazon](https://www.amazon.co.jp/%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABTV%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88-2022%E5%B9%B45%E6%9C%88%E5%8F%B7/dp/B09TTCD97Y/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=G0PN8BHG06WE&keywords=%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABTV%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7&qid=1647021071&sprefix=%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABtv%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C232&sr=8-1)    |   
 | 2022.3.26 | 音乐   | 富士台 MUSIC FAIR   18:00～<br/>「オン・マイ・オウン」生田絵梨花 |                                                              |                                                              |
