--- a/year/2022.md
+++ b/year/2022.md
@@ -53,7 +53,7 @@
 | 2022.2.12 | 乃木坂 | 乃木坂46 生田绘梨花毕业演唱会（for J-LODlive）               | [生](https://www.bilibili.com/video/BV1du411975e) ‖ [油管](https://www.youtube.com/watch?v=zMUkljR9Z1U) |                                                              |
 | 2022.2.18 | 音乐   | SHIONOGI music fair2900回纪念演唱会                          |                                                              |                                                              |
 | 2022.2.18 | 电影   | 『行骗天下JP 英雄篇』making                                  | [生](https://www.bilibili.com/video/BV1JY41157Vn) ‖ [油管](https://www.youtube.com/watch?v=mrW5n5Ent9U) |                                                              |
-| 2022.2.19 | 杂志   | madame FIGARO japon 2022年4月号                              |        [微博](https://weibo.com/5177703789/Lg64xnrJk)        |                                                              |
+| 2022.2.19 | 杂志   | madame FIGARO japon 2022年4月号                              |        [微博](https://weibo.com/5177703789/Lg64xnrJk)        |                         [拍摄采访](https://weibo.com/ttarticle/p/show?id=2309404750309825315927#_0)                                     |
 | 2022.2.19 | 音乐   | Sound Inn "S"                                                | [熟](https://www.bilibili.com/video/BV1ri4y1r7Gj)  |                      |
 | 2022.2.19 | FC     | 『ERIKA IKUTA OFFICIAL SITE』开设直播記念                    |                                                              |                                                              |
 | 2022.2.28 | 电影   | 【剧透注意】行骗天下TV-泪的大Hit感謝祭                       | [生](https://www.bilibili.com/video/BV1Ar4y167xt) ‖ [油管](https://www.youtube.com/watch?v=88ltoUADhQQ) |                                                              |
