--- a/theme/音番总结.md
+++ b/theme/音番总结.md
@@ -106,3 +106,6 @@
 | 2022.2.19 | Sound Inn "S" | 『Your song』『明日への扉』『誕生』 | [生](https://www.bilibili.com/video/BV1Su411Q7Wo) |      |
 | 2022.3.5 | MUSIC FAIR    | 『MUSIC FAIRテーマ曲』 <br> アリス × ゆず × 三浦大知 × 山崎育三郎 × 生田絵梨花 × Little Glee Monster <br>『卒業写真』『旅立ちの日に』生田絵梨花 × Little Glee Monster |         [熟](https://www.bilibili.com/video/BV1PS4y1r7pj)       |      |
 | 2022.3.19 | MUSIC FAIR    | 『愛していれば分かり合える』山崎育三郎 × 生田絵梨花 |         [熟](https://www.bilibili.com/video/BV19T4y1v7yF)       |      |
+| 2022.3.26 | MUSIC FAIR    | 『オン・マイ・オウン On My Own』 |         [熟](https://www.bilibili.com/video/BV1RS4y1U7VZ/)       |      |
+
+
