--- a/year/2022.md
+++ b/year/2022.md
@@ -74,7 +74,7 @@
 | 2022.3.22  | 杂志 | TV guide Alpha EPISODE AAA vol.53          | [微博](https://weibo.com/5177703789/LkWN5yEjk)  |   [amazon](https://www.amazon.co.jp/TV%E3%82%AC%E3%82%A4%E3%83%89Alpha-EPISODE-AAA-TV%E3%82%AC%E3%82%A4%E3%83%89MOOK-107%E5%8F%B7/dp/4867014095/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OE6FGHPHNUPP&keywords=TV+guide+Alpha+AAA&qid=1646834337&sprefix=tv+guide+alpha+aaa%2Caps%2C241&sr=8-1)    |   
 | 2022.3.24  | 杂志 | 『デジタルTVガイド』 2022年5月号         | [微博](https://weibo.com/5531210321/LleeiETVK)  |   [amazon](https://www.amazon.co.jp/%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABTV%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88-2022%E5%B9%B45%E6%9C%88%E5%8F%B7/dp/B09TTCD97Y/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=G0PN8BHG06WE&keywords=%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABTV%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7&qid=1647021071&sprefix=%E3%83%87%E3%82%B8%E3%82%BF%E3%83%ABtv%E3%82%AC%E3%82%A4%E3%83%89%E5%85%A8%E5%9B%BD%E7%89%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C232&sr=8-1)    |   
 | 2022.3.24 | 杂志   | 『TVfan』5月号 |   |[tvfan](http://tvfan.jp/?p=1057841) |
-| 2022.3.26 | 音乐   | 富士台 MUSIC FAIR   18:00～<br/>「オン・マイ・オウン」生田絵梨花 |    [生](https://www.bilibili.com/video/BV1SP4y1T7zS)                                                          |                                                              |
+| 2022.3.26 | 音乐   | 富士台 MUSIC FAIR   18:00～<br/>「オン・マイ・オウン」生田絵梨花 |    [熟](https://www.bilibili.com/video/BV1RS4y1U7VZ/)                                                          |                                                              |
 | 2022.3.27 | 音乐   | 『映画音楽はすばらしい！Ⅳ』2:00~3:29 BS4K   |                        |     [主页](https://www.nhk.jp/p/ts/V7Z8YMLJN6/)                                                         |
 | 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                             |                                                              |                                                              |
 | 2022.3.30 | 杂志   | 『週刊TVガイド』 |   |[tvguide](https://www.tvguide.or.jp/) |
