--- a/year/2022.md
+++ b/year/2022.md
@@ -79,7 +79,7 @@
 | 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                             |                                                              |                                                              |
 | 2022.3.30 | 杂志   | 『週刊TVガイド』 |   |[tvguide](https://www.tvguide.or.jp/) |
 | 2022.4.1 | 杂志   | 『TVガイドPERSON』VOL.116 |   |[zasshi.tv](https://zasshi.tv/products/17363/) |
-| 2022.4.3 | 番组   | 『ニノさん』 |   |[推特](https://twitter.com/ninosan_ntv)‖[主页](https://www.ntv.co.jp/ninosan/) |
+| 2022.4.3 | 番组   | 『ニノさん』日本テレビ 10:25〜11:25 |   |[推特](https://twitter.com/ninosan_ntv)‖[主页](https://www.ntv.co.jp/ninosan/) |
 | 2022.4.9 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ |                                         |                                                              |
 | 2022.4.19  | 杂志 | 『BARFOUT!』 バァフアウト! 2022年5月号  Volume 320          |   |   [amazon](https://www.amazon.co.jp/dp/4344954238/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OPN98NSHVP28&keywords=barfout%21+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88%21+2022%E5%B9%B4+5%E6%9C%88%E5%8F%B7&qid=1646747612&sprefix=barfout+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C226&sr=8-1)    |                  
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
