--- a/year/2022.md
+++ b/year/2022.md
@@ -80,7 +80,7 @@
 | 2022.3.30 | 杂志   | 『週刊TVガイド』 |   |[tvguide](https://www.tvguide.or.jp/) |
 | 2022.3.30 | 杂志   | 『テレビライフ』TV LIFE 2022年7号 | [微博](https://wx2.sinaimg.cn/large/005Ep7hrly1h0tc3dszcfj31td2mhhdt.jpg)  |[tvlife](https://www.tvlife.jp/latest/463860) |
 | 2022.4.1 | 杂志   | 『TVガイドPERSON』VOL.116 |   |[zasshi.tv](https://zasshi.tv/products/17363/) |
-| 2022.4.3 | 番组   | 『ニノさん』日本テレビ 10:25〜11:25 |   |[推特](https://twitter.com/ninosan_ntv)‖[主页](https://www.ntv.co.jp/ninosan/) |
+| 2022.4.3 | 番组   | 『ニノさん』日本テレビ 10:25〜11:25 | [生](https://www.bilibili.com/video/BV1N5411D7dY)  |[推特](https://twitter.com/ninosan_ntv)‖[主页](https://www.ntv.co.jp/ninosan/) |
 | 2022.4.6 | 杂志   | 『anan』No.2294  2022年4月13日号  |   | |
 | 2022.4.9 | 音乐   | 富士台 MUSIC FAIR 18:00～18:30予定『四月は君の嘘』  |   | |
 | 2022.4.9 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ |                                         |                                                              |
