--- a/year/2022.md
+++ b/year/2022.md
@@ -81,7 +81,7 @@
 | 2022.3.30 | 杂志   | 『テレビライフ』TV LIFE 2022年7号 | [微博](https://wx2.sinaimg.cn/large/005Ep7hrly1h0tc3dszcfj31td2mhhdt.jpg)  |[tvlife](https://www.tvlife.jp/latest/463860) |
 | 2022.4.1 | 杂志   | 『TVガイドPERSON』VOL.116 |   |[zasshi.tv](https://zasshi.tv/products/17363/) |
 | 2022.4.3 | 番组   | 『ニノさん』日本テレビ 10:25〜11:25 | [生](https://www.bilibili.com/video/BV1N5411D7dY)  |[推特](https://twitter.com/ninosan_ntv)‖[主页](https://www.ntv.co.jp/ninosan/) |
-| 2022.4.6 | 杂志   | 『anan』No.2294  2022年4月13日号  |   | |
+| 2022.4.6 | 杂志   | 『anan』No.2294  2022年4月13日号  | [微博](https://weibo.com/5177703789/Ln5B7E8dy)  | |
 | 2022.4.9 | 音乐   | 富士台 MUSIC FAIR 18:00～18:30予定『四月は君の嘘』  |   | |
 | 2022.4.9 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ |                                         |                                                              |
 | 2022.4.19  | 杂志 | 『BARFOUT!』 バァフアウト! 2022年5月号  Volume 320          |   |   [amazon](https://www.amazon.co.jp/dp/4344954238/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OPN98NSHVP28&keywords=barfout%21+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88%21+2022%E5%B9%B4+5%E6%9C%88%E5%8F%B7&qid=1646747612&sprefix=barfout+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C226&sr=8-1)    |                  
