--- a/year/2022.md
+++ b/year/2022.md
@@ -77,7 +77,7 @@
 | 2022.3.26 | 音乐   | 富士台 MUSIC FAIR   18:00～<br/>「オン・マイ・オウン」生田絵梨花 |    [熟](https://www.bilibili.com/video/BV1RS4y1U7VZ/)                                                          |                                                              |
 | 2022.3.27 | 音乐   | 『映画音楽はすばらしい！Ⅳ』2:00~3:29 BS4K   |   [熟](https://www.bilibili.com/video/BV18T4y1e7sJ)                     |     [主页](https://www.nhk.jp/p/ts/V7Z8YMLJN6/)                                                         |
 | 2022.3.30 | 音乐剧 | 音乐连续剧『传达吧！爱之歌』发售                             |                                                              |                                                              |
-| 2022.3.30 | 杂志   | 『週刊TVガイド』 |   |[tvguide](https://www.tvguide.or.jp/) |
+| 2022.3.30 | 杂志   | 『週刊TVガイド』 | [微博](https://weibo.com/5177703789/LncjWcoPJ)  |[tvguide](https://www.tvguide.or.jp/) |
 | 2022.3.30 | 杂志   | 『テレビライフ』TV LIFE 2022年7号 | [微博](https://wx2.sinaimg.cn/large/005Ep7hrly1h0tc3dszcfj31td2mhhdt.jpg)  |[tvlife](https://www.tvlife.jp/latest/463860) |
 | 2022.4.1 | 杂志   | 『TVガイドPERSON』VOL.116 |   |[zasshi.tv](https://zasshi.tv/products/17363/) |
 | 2022.4.3 | 番组   | 『ニノさん』日本テレビ 10:25〜11:25 | [生](https://www.bilibili.com/video/BV1N5411D7dY)  |[推特](https://twitter.com/ninosan_ntv)‖[主页](https://www.ntv.co.jp/ninosan/) |
