--- a/year/2022.md
+++ b/year/2022.md
@@ -84,6 +84,7 @@
 | 2022.4.6 | 杂志   | 『anan』No.2294  2022年4月13日号  | [微博](https://weibo.com/5177703789/Ln5B7E8dy)  | |
 | 2022.4.9 | 音乐   | 富士台 MUSIC FAIR 18:00～18:30予定『四月は君の嘘』  |   | |
 | 2022.4.9 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ |                                         |                                                              |
+| 2022.4.16 | 音乐   | 発表！Nコン2022課題曲(旁白) 15:00〜15:30 |        |   [主页](https://tvguide.myjcom.jp/detail/?channelType=2&serviceCode=1032_32737&eventId=23489&programDate=20220416&app=1)                                                           |
 | 2022.4.19  | 杂志 | 『BARFOUT!』 バァフアウト! 2022年5月号  Volume 320          |   |   [amazon](https://www.amazon.co.jp/dp/4344954238/ref=sr_1_1?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=3OPN98NSHVP28&keywords=barfout%21+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88%21+2022%E5%B9%B4+5%E6%9C%88%E5%8F%B7&qid=1646747612&sprefix=barfout+%E3%83%90%E3%82%A1%E3%83%95%E3%82%A2%E3%82%A6%E3%83%88+2022%E5%B9%B45%E6%9C%88%E5%8F%B7%2Caps%2C226&sr=8-1)    |       
 | 2022.4.21 | 杂志   | 『MAQUIA(マキア)』2022年6月号  |  | |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
