--- a/theme/音番总结.md
+++ b/theme/音番总结.md
@@ -108,4 +108,6 @@
 | 2022.3.19 | MUSIC FAIR    | 『愛していれば分かり合える』山崎育三郎 × 生田絵梨花 |         [熟](https://www.bilibili.com/video/BV19T4y1v7yF)       |      |
 | 2022.3.26 | MUSIC FAIR    | 『オン・マイ・オウン On My Own』 |         [熟](https://www.bilibili.com/video/BV1RS4y1U7VZ/)       |      |
 | 2022.3.27 | 映画音楽はすばらしい！Ⅳ| 『Suddenly I see』『XANADU』 |         [熟](https://www.bilibili.com/video/BV18T4y1e7sJ)       |      |
+| 2022.4.9 | MUSIC FAIR| 『四月は君の嘘』- 『The Beautiful Game』『旅に出よう』『Speed Of Sound\~カラフルに輝きながら\~』 | [生](https://www.bilibili.com/video/BV145411U7DC)       |      |
+| 2022.4.9 | Venue101| 嘉宾: INI『CALL119』 櫻坂46『僕のジレンマ』 ITZY『Voltage』 |         [生](https://www.bilibili.com/video/BV1244y1V7oz)       |      |
 
