--- a/theme/音乐剧&舞台剧汇总.md
+++ b/theme/音乐剧&舞台剧汇总.md
@@ -173,7 +173,12 @@
 
 **物料&简要说明**
 
-- 本篇: 暂无
+- 本篇生肉cut: 生田絵梨花公演映像（3月30日17：00公演）
+  - https://www.bilibili.com/video/BV1o7411j7ZS?p=2
+  - https://www.bilibili.com/video/BV1f7411j7uW?p=2
+- 音乐剧『罗密欧与朱丽叶』初日会見: https://www.bilibili.com/video/BV12s411h7ed
+- 生田絵梨花在排练中热唱音乐剧「罗密欧与茱丽叶」中的名曲: https://www.bilibili.com/video/BV1ks411e7to
+- 2019年ミュージカル『ロミオ＆ジュリエット』（日本版音乐剧《罗密欧与朱丽叶》）制作发布会媒体视频: https://www.bilibili.com/video/BV1Xb411A7ui
 - 卡司访谈: 20160927 https://www.bilibili.com/video/BV1Ss411t7nm
 - 番组采访: 
   - 20170117 https://www.bilibili.com/video/BV1Ps411a759)
@@ -254,6 +259,8 @@
 **物料&简要说明**
 
 - 本篇: 暂无
+- 日版音乐剧『MOZART！』相关: https://www.bilibili.com/video/BV1mx41177mD
+- 歌唱披露／ 生田絵梨花＆木下晴香 ♪「ダンスはやめられない」: https://www.bilibili.com/video/BV1uW41177ei
 - 采访 
   - 前編https://www.bilibili.com/video/BV1aW41137Sq 
   - 后篇https://www.bilibili.com/video/BV1Qp411Z7Mf
@@ -462,6 +469,7 @@
 - 130503 16人Principle deux 初日 http://www.bilibili.com/video/av6288331/
 - 花絮生肉: https://www.bilibili.com/video/BV1Es41147D8
 - 官方的网站：https://www.nogizaka46.com/files/46/principal/trois/?ima=5116
+- 16人のプリンシパル (2012)　＠PARCO劇場 生肉全集: https://www.bilibili.com/video/BV1kK411H7L6
 
 **评论感想**
 
