--- a/year/2022.md
+++ b/year/2022.md
@@ -91,8 +91,10 @@
 | 2022.4.21 | 杂志   | 『Myojo』2022年6月号  | [微博](https://weibo.com/5177703789/LpwCfhnHM) | |
 | 2022.4.23 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: SKYHI『BareBare』 羊文学『光るとき』 LuckyKilimanjaro『週休8日』 |  [生](https://www.bilibili.com/video/BV1LY4y1Y77K)  |                        |
 | 2022.4.30 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: 大橋ちっぽけ『嫌でもね』 BiSH『ごめんね』 ファーストサマーウイカ『OpentheDoor』 |    |                  |
+| 2022.5.1  | 电视剧 |『金田一少年の事件簿』第2話「聖恋島殺人事件」22:30                       |                             |                                      |
 | 2022.5.7  | 音乐剧 | 『四月は君の嘘』東京・日生劇場(~5.29)                        |                                                              |                                                              |
 | 2022.5.8  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |                             |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
+| 2022.5.8  | 电视剧 |『金田一少年の事件簿』第3話「聖恋島殺人事件」22:30                       |                             |                                      |
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
 | 2022.6.10 | 音乐剧 | 『四月は君の嘘』愛知・御園座(~6.12)                          |                                                              |                                                              |
 | 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
