--- a/year/2022.md
+++ b/year/2022.md
@@ -81,7 +81,7 @@
 | 2022.3.30 | 杂志   | 『テレビライフ』TV LIFE 2022年7号 | [微博](https://wx2.sinaimg.cn/large/005Ep7hrly1h0tc3dszcfj31td2mhhdt.jpg)  |[tvlife](https://www.tvlife.jp/latest/463860) |
 | 2022.4.1 | 杂志   | 『TVガイドPERSON』VOL.116 | [微博](https://weibo.com/2020610355/Lntmbwq5N)  |[zasshi.tv](https://zasshi.tv/products/17363/) |
 | 2022.4.3 | 番组   | 『ニノさん』日本テレビ 10:25〜11:25 | [生](https://www.bilibili.com/video/BV1N5411D7dY)  |[推特](https://twitter.com/ninosan_ntv)‖[主页](https://www.ntv.co.jp/ninosan/) |
-| 2022.4.6 | 杂志   | 『anan』No.2294  2022年4月13日号  | [微博](https://weibo.com/5177703789/Ln5B7E8dy)  | |
+| 2022.4.6 | 杂志   | 『anan』No.2294  2022年4月13日号  | [微博](https://weibo.com/5177703789/Ln5B7E8dy)  |[翻译](https://weibo.com/ttarticle/p/show?id=2309404762235531822179) |
 | 2022.4.9 | 音乐   | 富士台 MUSIC FAIR 18:00～18:30『四月は君の嘘』- 『The Beautiful Game』『旅に出よう』『Speed Of Sound\~カラフルに輝きながら\~』 | [熟](https://www.bilibili.com/video/BV15L4y157Pc)  | |
 | 2022.4.9 | 音乐   | NHK新音楽番組『Venue101』MC 23:00~ 嘉宾: INI『CALL119』 櫻坂46『僕のジレンマ』 ITZY『Voltage』  | [熟](https://www.bilibili.com/video/BV1nY4y1v7zx)   |                                        |
 | 2022.4.16 | 音乐   | 発表！Nコン2022課題曲(旁白) 15:00〜15:30 |   [生](https://www.bilibili.com/video/BV1V94y1o74N)     |   [主页](https://tvguide.myjcom.jp/detail/?channelType=2&serviceCode=1032_32737&eventId=23489&programDate=20220416&app=1)                                                           |
