--- a/year/2022.md
+++ b/year/2022.md
@@ -95,6 +95,7 @@
 | 2022.5.8  | 电影 | 『行骗天下JP 英雄篇』 Blu-ray＆DVD発売   |                             |   [主页](https://movie-product.ponycanyon.co.jp/item132/)                        |
 | 2022.5.8  | 电视剧 |『金田一少年の事件簿』第2話「聖恋島殺人事件」22:30        |               |      [主页](https://www.ntv.co.jp/kindaichi2022/story/)    |                                     
 | 2022.5.15  | 电视剧 |『金田一少年の事件簿』第3話「聖恋島殺人事件」22:30                       |          |      |
+| 2022.5.20 | 杂志   | 『東京カレンダー』2022年7月号  |  | |
 | 2022.6.4  | 音乐剧 | 『四月は君の嘘』群馬・高崎芸術劇場(~6.5)                     |                                                              |                                                              |
 | 2022.6.10 | 音乐剧 | 『四月は君の嘘』愛知・御園座(~6.12)                          |                                                              |                                                              |
 | 2022.6.16 | 音乐剧 | 『四月は君の嘘』兵庫県立芸術文化センター(~6.18)              |                                                              |                                                              |
